--- a/src/css/games/azulqueensgarden.less
+++ b/src/css/games/azulqueensgarden.less
@@ -7,7 +7,7 @@ html[data-theme=dark] {
 		.reduceBrightness();
 	}
 
-	.bga-cards_card>.bga-cards_card-sides,
+	.tile .bga-cards_card-side,
 	#scoring-board {
 		filter: var(--ext-bright);
 	}
